# asry

./: .codecov.yml  .gitignore  .gitmodules  CODEX_DEFERRED.md  Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  loc.yml
assets/: wav2vec2_base_960h_tokenizer.json
benches/: aligner_simd_baseline.rs  cut.rs  dispatch.rs
crates/whisper-cpp/: .gitignore  Cargo.toml  build.rs  wrapper.h
crates/whisper-cpp/examples/: smoke.rs
crates/whisper-cpp/src/: context.rs  error.rs  generated.rs  lib.rs  params.rs  state.rs  sys.rs
docs/superpowers/plans/: 2026-04-29-whispery-plan-a-types-and-core.md  2026-04-29-whispery-plan-b-runner-whisper-rs.md  2026-04-29-whispery-plan-c-alignment.md
docs/superpowers/specs/: 2026-04-28-whispery-cut-batch-whisper-design.md
examples/: core_only.rs
scripts/: fetch_fixtures.sh
src/: lib.rs  time.rs
src/align/: mod.rs  script.rs  script_dispatch.rs
src/core/: buffer.rs  command.rs  cut.rs  dispatch.rs  event.rs  mod.rs  oov.rs  transcriber.rs
src/runner/: alignment_pool.rs  asr_source.rs  errors.rs  lang_compat.rs  managed_transcriber.rs  mod.rs  whisper_pool.rs
src/runner/aligner/: aligner.rs  builder.rs  core.rs  emissions_aligner.rs  emissions_api.rs  key.rs  mod.rs  normalizer.rs  set.rs  test_fixtures.rs
src/runner/aligner/algorithm/: compose.rs  encode.rs  errors.rs  mod.rs  normalize.rs  silence_mask.rs  tokenize.rs  trellis_beam.rs  viterbi.rs
src/runner/aligner/emissions_aligner/: tests.rs
src/runner/aligner/emissions_api/: tests.rs
src/runner/aligner/normalizers/: chinese.rs  english.rs  japanese.rs  korean.rs  latin.rs  mod.rs  tests.rs
src/runner/alignment_pool/: mod.rs  tests.rs
src/types/: chunk_id.rs  errors.rs  lang.rs  mod.rs  transcript.rs  vad_segment.rs
tests/: aligner_load.rs  alignment_e2e.rs  core_e2e.rs  mock_full_params.rs  runner_e2e.rs  saturation_no_loss.rs  silence_mask_drops_words.rs  strict_lookup.rs  surface_form_invariants.rs  unpoll_round_trip.rs  whisperx_unit_parity.rs  worker_hang.rs
tests/parity_whisperx/: .gitignore  Cargo.toml  README.md  run.sh  run_vad.sh
tests/parity_whisperx/python/: export_wav2vec2_onnx.py  fetch_align_model.py  pyproject.toml  score.py  whisperx_runner.py  whisperx_silero_runner.py
tests/parity_whisperx/src/: main.rs
