[package]
name        = "whispery"
version     = "0.1.0"
edition     = "2024"
rust-version = "1.85"
license     = "MIT OR Apache-2.0"
description = "Sans-I/O cut/batch/whisper/align state machine for speech-to-text indexing pipelines"
repository  = "https://github.com/findit-studio/whispery"
readme      = "README.md"
keywords    = ["whisper", "asr", "speech-to-text", "indexing", "alignment"]
categories  = ["multimedia::audio", "science"]

[dependencies]
mediatime = { version = "0.1.5", default-features = false }
smol_str  = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }
smallvec  = { version = "1", default-features = false }

# Runner feature deps. All optional — Plan A's core compiles
# `--no-default-features` without these.
whisper-rs        = { version = "0.13", optional = true, default-features = false }
crossbeam-channel = { version = "0.5", optional = true, default-features = false, features = ["std"] }
num_cpus          = { version = "1",   optional = true }

# Optional features (Plan A scope only).
serde      = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }
arbitrary  = { version = "1", optional = true, features = ["derive"] }
quickcheck = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }
smol_str  = "0.3"
tempfile  = "3"
hound     = "3"          # WAV decoding for end-to-end tests
sha2      = "0.10"       # build.rs SHA-256 verification

[build-dependencies]
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }

[features]
default  = ["std", "runner"]
std      = ["mediatime/std", "smol_str/std", "serde?/std"]
serde    = ["dep:serde", "smol_str/serde", "mediatime/serde"]
runner   = ["dep:whisper-rs", "dep:crossbeam-channel", "dep:num_cpus", "std"]
alignment = ["runner"]

[lib]
name = "whispery"
path = "src/lib.rs"

[[example]]
name = "core_only"
path = "examples/core_only.rs"

[[bench]]
name    = "cut"
path    = "benches/cut.rs"
harness = false

[[bench]]
name    = "dispatch"
path    = "benches/dispatch.rs"
harness = false

[[test]]
name              = "runner_e2e"
path              = "tests/runner_e2e.rs"
required-features = ["runner"]
