[package]
name        = "whispery"
version     = "0.1.0"
edition      = "2024"
rust-version = "1.95"
license     = "MIT OR Apache-2.0"
description = "Sans-I/O cut/batch/whisper/align state machine for speech-to-text indexing pipelines"
repository  = "https://github.com/findit-studio/whispery"
readme      = "README.md"
keywords    = ["whisper", "asr", "speech-to-text", "indexing", "alignment"]
categories  = ["multimedia::audio", "science"]

[dependencies]
mediatime = { version = "0.1.5", default-features = false }
smol_str  = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }
smallvec  = { version = "1", default-features = false }

# Runner feature deps. All optional — Plan A's core compiles
# `--no-default-features` without these.
#
# The whisper.cpp wrapper is the in-house `whisper-cpp` crate
# under `crates/whisper-cpp/`. It replaced `whisper-rs 0.16` after
# we reproduced two soundness bugs in that crate's safe API
# (`set_abort_callback_safe` UB → `failed to encode` on every
# decode; `set_initial_prompt` / `set_language` `CString::into_raw`
# leak with no `Drop`). The new bindings own + drop every CString
# and route the abort callback through a properly-typed C
# trampoline.
whisper-cpp       = { path = "crates/whisper-cpp", optional = true, default-features = false }
crossbeam-channel = { version = "0.5", optional = true, default-features = false, features = ["std"] }
num_cpus          = { version = "1",   optional = true }

# Alignment feature deps. All optional — Plan A/B compile without them.
# ort: ONNX runtime bindings. Pinned to =2.0.0-rc.12 because rc.13+
# changed Session API in incompatible ways and rc.x versions don't
# follow semver across rc bumps.
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
# tokenizers: HuggingFace WordPiece/BPE/Unigram tokenizer used to
# read wav2vec2's tokenizer.json. ^0.20 ships pure-Rust without
# pulling onig.
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }
# ndarray: tensor reshaping for the wav2vec2 input/output shapes.
ndarray = { version = "0.17", optional = true, default-features = false, features = ["std"] }

# Optional features (Plan A scope only).
serde           = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }
# `humantime_serde` formats `Duration` as `"30s"` / `"100ms"` etc.
# instead of the raw `{ secs, nanos }` numeric struct serde derives
# by default. Pulled in only when `serde` is on; the conditional
# `with = "humantime_serde"` attribute on `Duration` fields elects
# the friendlier encoding for human-edited config files.
humantime-serde = { version = "1", optional = true, default-features = false }
arbitrary       = { version = "1", optional = true, features = ["derive"] }
quickcheck      = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion  = { version = "0.8", default-features = false, features = ["html_reports"] }
smol_str   = "0.3"
tempfile   = "3"
hound      = "3"          # WAV decoding for end-to-end tests
sha2       = "0.11"       # build.rs SHA-256 verification
# serde_json is dev-only — exercised in `#[cfg(feature = "serde")]`
# round-trip tests for the per-options serde encoding (silero's
# pattern). Production never serialises options at runtime; the
# encoding is for human-edited config files.
serde_json = "1"

[build-dependencies]
sha2 = "0.11"
ureq = { version = "3", default-features = false, features = ["rustls"] }
# Build-time JSON parser for the bundled wav2vec2-base-960h
# tokenizer. Decoding once at build.rs and emitting Rust
# constants into OUT_DIR means the runtime crate never sees
# `serde_json`'s code path for the bundled vocab — alignment
# starts up with already-parsed `&[(&str, u32)]` slices.
serde_json = "1"

[features]
default  = ["std", "runner"]
std      = ["mediatime/std", "smol_str/std", "serde?/std"]
serde    = ["dep:serde", "dep:humantime-serde", "smol_str/serde", "mediatime/serde"]
runner   = ["dep:whisper-cpp", "dep:crossbeam-channel", "dep:num_cpus", "std"]
alignment = ["runner", "dep:ort", "dep:tokenizers", "dep:ndarray"]
# Apple-only GPU acceleration for whisper.cpp. `metal` runs the
# encoder on the unified-memory Metal backend (works on every
# Apple Silicon Mac); `coreml` additionally dispatches the encoder
# to ANE if the caller has produced a CoreML companion `.mlmodelc`.
# Both default OFF — the crate compiles BLAS-only on every
# platform without these features. Enable both on Apple Silicon
# for production.
metal  = ["runner", "whisper-cpp/metal"]
coreml = ["runner", "whisper-cpp/coreml"]
# Re-exports `pub(crate)` alignment internals (scalar/NEON normaliser
# variants, raw `ctc_viterbi`, `LogProbsTV`) under `whispery::__bench`
# so the SIMD baseline bench can call them directly. Doc-hidden;
# never enable in shipping builds. Requires `alignment` for the
# wav2vec2-pipeline symbols it exposes.
bench-internals = ["alignment"]
# Relaxes `tokenize_with_word_map`'s default fail-closed-on-pronounced-
# symbol policy so non-alphanumeric OOV chars also become wildcards
# (matching WhisperX's `*`-placeholder behaviour 1:1). Default policy
# drops the chunk on `&` / `,` / etc. that aren't on the skippable-
# internal-punct whitelist; under this feature they all wildcard.
# Trade-off: full WhisperX parity at the cost of whispery's stricter
# guard against silently aligning pronounced symbols (`&` in `AT&T`)
# to whichever vocab item happens to win the frame. Off by default;
# opt in only if downstream consumers expect WhisperX-1:1 behaviour.
whisperx-strict-tokenizer = ["alignment"]
# Diagnostic-only: write `wy_seg<N>.{emission,trellis}.bin` and a
# `wy_seg<N>.tokens.json` companion to the directory pointed to by
# `WHISPERY_PARITY_DUMP_TRELLIS` whenever set on a process running
# `Aligner::align_chunk`. The dump uses hand-formatted JSON for the
# tokens companion (no serde_json runtime dep) and `std::fs::File`
# directly. Do NOT enable in shipping builds — the env hook + dump
# bytes never check failures.
parity-dump-emission = ["alignment"]

[lib]
name = "whispery"
path = "src/lib.rs"

[[example]]
name = "core_only"
path = "examples/core_only.rs"

[[bench]]
name    = "cut"
path    = "benches/cut.rs"
harness = false

[[bench]]
name    = "dispatch"
path    = "benches/dispatch.rs"
harness = false

[[bench]]
name              = "aligner_simd_baseline"
path              = "benches/aligner_simd_baseline.rs"
harness           = false
required-features = ["bench-internals"]

[[test]]
name              = "runner_e2e"
path              = "tests/runner_e2e.rs"
required-features = ["runner"]

[[test]]
name              = "alignment_e2e"
path              = "tests/alignment_e2e.rs"
required-features = ["alignment"]

[[test]]
name              = "whisperx_unit_parity"
path              = "tests/whisperx_unit_parity.rs"
required-features = ["bench-internals"]
