[workspace]
# Standalone workspace — same pattern as `tests/parity_whisperx/`.
# Keeps this crate's `target/` out of whispery's main build cache and
# lets `cargo build` here resolve a focused dep tree (no whispery
# pull-through). The whispery crate consumes us via a path dep
# behind a feature flag.

[package]
name        = "whisper-cpp"
version     = "0.0.1"
edition     = "2024"
rust-version = "1.95"
license     = "MIT OR Apache-2.0"
description = "First-party safe Rust bindings to whisper.cpp, replacing whisper-rs for the whispery production stack."
repository  = "https://github.com/findit-studio/whispery"
publish     = false

[lib]
name = "whisper_cpp"
path = "src/lib.rs"

[features]
# Default to the most common production target on Apple Silicon.
# Build with `--no-default-features` for a CPU-only BLAS build.
default = ["metal", "coreml"]
# Apple Metal backend. Sets `GGML_METAL=ON` in cmake, links
# `Metal.framework` + `MetalKit.framework`, and enables the embedded
# metallib path so no `default.metallib` companion file is needed
# at runtime.
metal = []
# Apple CoreML encoder dispatch. Optional — requires a separately
# converted `<model>-encoder.mlmodelc` file at runtime; whisper.cpp
# falls back to Metal if absent.
coreml = []
# OpenBLAS CPU backend (Linux/Windows). Mutually compatible with
# `metal`; whisper.cpp picks the GPU path when both are compiled in.
openblas = []
# CUDA backend for Linux + Windows. Pulls a much heavier build —
# off by default.
cuda = []

[dependencies]
# Public error type. `thiserror` is the same dep whispery uses;
# keeping the version aligned avoids two copies in the dep graph
# when this crate is consumed via path.
thiserror = { version = "2", default-features = false }

[build-dependencies]
# `cmake` drives the in-tree whisper.cpp build. The crate vendors
# whisper.cpp itself as a git submodule under
# `crates/whisper-cpp/whisper.cpp/`.
cmake    = "0.1"
# `bindgen` generates Rust FFI for whisper.h + the ggml symbols
# we need. Output lands in `OUT_DIR/bindings.rs` and is `include!`'d
# from `src/sys.rs`.
bindgen  = "0.72"

[dev-dependencies]
# Hound is for the `examples/smoke.rs` WAV reader only — never
# pulled into a production build of `whisper-cpp` itself.
hound = "3"

[[example]]
name = "smoke"
path = "examples/smoke.rs"
