[workspace]

[package]
name        = "whispery-parity-runner"
version     = "0.0.0"
edition     = "2024"
publish     = false
description = "Manual parity harness: dump whispery alignment output to JSON for side-by-side comparison with WhisperX."

[dependencies]
# `whispery` carries the `runner` + `alignment` features that this binary
# exercises. Pinned by path because this is in-tree tooling, not a
# downstream consumer.
whispery     = { path = "../..", default-features = false, features = ["runner", "alignment", "bench-internals", "parity-dump-emission"] }
# `silero` (the Rust VAD crate) is the system-under-test for the
# `whispery-silero-runner` binary in `src/bin/silero_runner.rs`. Path
# dep deliberately points at the in-tree silero crate at
# `findit-studio/silero` rather than crates.io, so this harness
# exercises the just-shipped 0.3.0 fixes (the silence-counter
# off-by-one correction and the `OnceLock`-based ffmpeg-init pattern).
# The `bundled` feature ships the `silero_vad.onnx` bytes inside the
# binary — byte-identical to what the snakers4/silero-vad checkout's
# `data/silero_vad.onnx` contains — so the Rust runner and the
# `whisperx_silero_runner.py --backend onnx` runner feed the SAME
# ONNX bytes through ORT. That isolates segmenter logic from runtime
# drift between PyTorch JIT and ORT.
silero       = { path = "../../../silero", features = ["bundled"] }
# `ffmpeg-next` is used in the parity runner's audio loader so that:
#   1. The harness mirrors production callers of whispery, which feed
#      samples through `ffmpeg-next` (whispery itself is Sans-I/O and
#      does not depend on ffmpeg directly — see the `audio_service`
#      processor in the indexer).
#   2. The audio bytes whispery sees match WhisperX's reference path
#      exactly (`load_audio`: `ffmpeg → s16le → np.float32 / 32768.0`).
#      The previous `hound` loader read f32 WAVs at full f32 fidelity,
#      diverging ~30 PPM from WhisperX on the dia f32 fixtures and
#      propagating to ~1.45 nat emission divergence on numerically
#      sensitive frames (the `01_dialogue` Whisper-hallucinated
#      "no, no, no..." × 112 segment).
#
# Pinned to `8` because the local toolchain ships system FFmpeg 8.x
# (Homebrew `ffmpeg 8.1`) which dropped `libavcodec/avfft.h`; the
# `ffmpeg-next 7.x` series still references that header in its
# bindgen pass and therefore fails to build against system FFmpeg 8.
ffmpeg-next  = "8"
serde_json   = "1"
clap         = { version = "4", features = ["derive"] }
sha2         = "0.10"
anyhow       = "1"

[[bin]]
name = "whispery-parity-runner"
path = "src/main.rs"

[[bin]]
name = "whispery-trellis-diff"
path = "src/bin/trellis_diff.rs"
