[workspace]

[package]
name        = "whispery-parity-runner"
version     = "0.0.0"
edition     = "2024"
publish     = false
description = "Manual parity harness: dump whispery alignment output to JSON for side-by-side comparison with WhisperX."

[dependencies]
# `whispery` carries the `runner` + `alignment` features that this binary
# exercises. Pinned by path because this is in-tree tooling, not a
# downstream consumer.
# `metal` + `coreml` opt into Apple Silicon GPU + ANE acceleration
# in whisper.cpp via whisper-rs. Both required to bypass the BLAS-
# only `whisper_full_with_state: failed to encode` path; no-op on
# non-Apple platforms (whisper-rs gates them in its own build.rs).
whispery     = { path = "../..", default-features = false, features = ["runner", "alignment", "bench-internals", "parity-dump-emission", "metal", "coreml"] }
whisper-cpp  = { path = "../../crates/whisper-cpp", default-features = false, features = ["metal", "coreml"] }
# `silero` (the Rust VAD crate) is the system-under-test for the
# `whispery-silero-runner` binary in `src/bin/silero_runner.rs`. Path
# dep deliberately points at the in-tree silero crate at
# `findit-studio/silero` rather than crates.io, so this harness
# exercises the just-shipped 0.3.0 fixes (the silence-counter
# off-by-one correction and the `OnceLock`-based ffmpeg-init pattern).
# The `bundled` feature ships the `silero_vad.onnx` bytes inside the
# binary — byte-identical to what the snakers4/silero-vad checkout's
# `data/silero_vad.onnx` contains — so the Rust runner and the
# `whisperx_silero_runner.py --backend onnx` runner feed the SAME
# ONNX bytes through ORT. That isolates segmenter logic from runtime
# drift between PyTorch JIT and ORT.
silero       = { path = "../../../silero", features = ["bundled"] }
# `ffmpeg-next` is used in the parity runner's audio loader so that:
#   1. The harness mirrors production callers of whispery, which feed
#      samples through `ffmpeg-next` (whispery itself is Sans-I/O and
#      does not depend on ffmpeg directly — see the `audio_service`
#      processor in the indexer).
#   2. The audio bytes whispery sees match WhisperX's reference path
#      exactly (`load_audio`: `ffmpeg → s16le → np.float32 / 32768.0`).
#      The previous `hound` loader read f32 WAVs at full f32 fidelity,
#      diverging ~30 PPM from WhisperX on the dia f32 fixtures and
#      propagating to ~1.45 nat emission divergence on numerically
#      sensitive frames (the `01_dialogue` Whisper-hallucinated
#      "no, no, no..." × 112 segment).
#
# Pinned to `8` because the local toolchain ships system FFmpeg 8.x
# (Homebrew `ffmpeg 8.1`) which dropped `libavcodec/avfft.h`; the
# `ffmpeg-next 7.x` series still references that header in its
# bindgen pass and therefore fails to build against system FFmpeg 8.
ffmpeg-next  = "8"
serde_json   = "1"
clap         = { version = "4", features = ["derive"] }
sha2         = "0.10"
anyhow       = "1"
# Direct whisper-rs dep for the `whisper-minimal` smoke binary —
# bisects whispery's pool wiring vs. raw whisper-rs to localise the
# `whisper_full_with_state: failed to encode` bug. Mirror whispery's
# Apple-Silicon feature opt-ins.
whisper-rs   = { version = "0.16", default-features = false, features = ["metal", "coreml"] }
hound        = "3"

# candle-whisper backend evaluation: pure-Rust Transformer ML
# stack with Metal support. Used by `src/bin/candle_whisper.rs`
# to benchmark vs. whisper-rs / whisper-cli on the same audio.
candle-core         = { version = "0.10", default-features = false, features = ["metal"] }
candle-nn           = { version = "0.10", default-features = false, features = ["metal"] }
candle-transformers = { version = "0.10", default-features = false, features = ["metal"] }
hf-hub              = { version = "0.4",  default-features = false, features = ["ureq", "rustls-tls"] }
byteorder           = "1"
rand                = "0.9"
tokenizers          = { version = "0.23", default-features = false, features = ["onig"] }

[[bin]]
name = "whispery-parity-runner"
path = "src/main.rs"

[[bin]]
name = "whisper-minimal"
path = "src/bin/whisper_minimal.rs"

[[bin]]
name = "candle-whisper"
path = "src/bin/candle_whisper.rs"

[[bin]]
name = "whispery-whisper-cpp"
path = "src/bin/whispery_whisper_cpp.rs"

[[bin]]
name = "whispery-trellis-diff"
path = "src/bin/trellis_diff.rs"

# `whispery-silero-runner` — the Rust side of the silero VAD parity
# track. Loads a 16 kHz mono WAV via the same `ffmpeg-next` loader the
# alignment parity runner uses, drives `silero::detect_speech` with
# WhisperX-style defaults (threshold 0.5, max_speech_duration_s 30),
# and emits JSON in the same schema as `python/whisperx_silero_runner.py`
# so `python/score_vad.py` can compute IoU between them.
[[bin]]
name = "whispery-silero-runner"
path = "src/bin/silero_runner.rs"
