[project]
name = "whispery-parity-whisperx"
version = "0.0.0"
requires-python = ">=3.10"
# WhisperX is pinned to an exact version because pipeline behavior
# (alignment-model selection, segment merging, output schema) can shift
# between minor versions. If a newer release ships, bump deliberately
# and re-baseline the parity numbers in `README.md`.
#
# WhisperX 3.4.x is the line that ships the wav2vec2 forced-alignment
# pipeline whispery is intentionally re-implementing in Rust. The
# corresponding HuggingFace alignment model
# (`facebook/wav2vec2-base-960h`) shares weights with the ONNX export
# whispery loads, so any IoU mismatch between runners is in
# pre/post-processing rather than acoustic-model differences.
dependencies = [
  "whisperx == 3.4.3",
  # pyannote-audio 3.4.0 (a transitive dep of whisperx 3.4.3) calls
  # `torchaudio.AudioMetaData`, which was removed by torchaudio 2.7
  # (the StreamReader/Writer cleanup). Pin torch + torchaudio to
  # the last 2.6.x line so a fresh `uv pip install` doesn't walk
  # into `AttributeError: module 'torchaudio' has no attribute
  # 'AudioMetaData'`.
  "torch == 2.6.*",
  "torchaudio == 2.6.*",
  "soundfile",
  "numpy",
]

# Disable setuptools auto-discovery: this project has no installable
# Python package, just the CLI scripts in this directory. Mirrors
# dia/tests/parity/python/pyproject.toml for consistency.
[tool.setuptools]
packages = []
